# RecepAI-ASR

./: .gitignore  README.md  body.json  launch.json  recepai.config.example.json  scaffold_recepai.py  test_llm_stream.ps1  test_mono16k_pcm.py  test_phase8b3_hotfix.ps1
.venv312/: pyvenv.cfg
.venv312/Scripts/: activate  activate.bat
Logs/: CLIENT_PROBE_RUNBOOK.md  WS_CONTRACT_INVENTORY.md  ws_probe_matrix.md  ws_test_client_diagnostic_report.md
Reports/phase7/: PHASE7_RUNBOOK.md
Reports/phase8/: GATEWAY_IMPLEMENTATION_REQUIRED.md  PHASE8B1_WS_VALIDATION_RUN.md  PHASE8B2_EMPTY_AGENTTEXT_DEBUG.md  PHASE8B2_IMPLEMENTATION_SUMMARY.md  PHASE8B3_LLM_STREAM_FIX.md  PHASE8_BASELINE_STATUS.md  PHASE8_BUILD_AND_TEST_EVIDENCE.md  PHASE8_OBSERVABILITY_VERIFICATION.md
docs/: ARCHITECTURE.md  NFRS.md  RUN_SERVICES_DEV.md  WS_CLIENT_DIAGNOSTIC_REPORT.md  current-implementation-python.md  open-items-python.md
gateway/RecepAI.VoiceGateway/: README.md
infra/helm/: README.md
scripts/: bootstrap_dev.ps1  capture_ws_test_client_first30.py  di_probe_runner.py  make_test_wav.py  phase8_smoketest.ps1  run_asr.ps1  ws_audio_test_client.py  ws_min_connect.py  ws_phase8_client.ps1  ws_probe_matrix.py  ws_test_client.py  ws_test_client_first30.md
shared/python/recepai_shared/: README.md  __init__.py  config.py  logging_utils.py  pyproject.toml
shared/python/recepai_shared/src/recepai_shared/: __init__.py  _demo.py  config.py  logging_utils.py  tracing.py
shared/python/recepai_shared/src/recepai_shared.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+24 files in other folders)
