[project]
name = "recepai_shared"
version = "0.1.0"
description = "RecepAI shared Python package for config, logging, and tracing placeholders"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [ { name = "RecepAI" } ]
dependencies = [
  "pydantic>=2.6",
  # Optional: prefer pydantic-settings if available
  "pydantic-settings>=2.0",
]

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
